--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!-- Autor: Gabriel Henrique 2C 28.08.2024 --!>
+<!-- Autor: Gabriel Henrique 2C 28.08.2024 !-->
 <!DOCTYPE html>
 <html>
 Gabriel henrique Balbino Costa 2C 22/08/2024
